--- a/index.html
+++ b/index.html
@@ -226,6 +226,22 @@
 				$('#selectedColor').css("background-color", $(this).find(".content").css("background-color"));
 				
 			});
+			$("#canvas").on("mouseup", ".object", function(e) {
+				for(i = 0; i < allRelationships.length; i++) {
+					relationshipObjectSource = allRelationships[i].source.closest(".object");
+					console.log($.data(relationshipObjectSource));
+					relationshipObjectTarget = allRelationships[i].target.closest(".object");
+					console.log(relationshipObjectTarget.attr("id"));
+					console.log($.data($(this)));
+					if (relationshipObjectSource.attr("id") == $(this).attr("id") || relationshipObjectTarget.attr("id") == $(this).attr("id")) {
+						allRelationships[i].arrow.forEach(function(value, index, array) {
+							value.remove();
+						});
+						var relationArrow = paper.arrow(allRelationships[i].source.offset().left - 1,allRelationships[i].source.offset().top + 5, allRelationships[i].target.offset().left + 2, allRelationships[i].target.offset().top + 8, 8);
+						allRelationships[i].arrow = relationArrow;
+					}
+				}
+			});
 			
 			
 			//When the document is double clicked, spawn an object
