--- a/index.html
+++ b/index.html
@@ -74,13 +74,11 @@
 				offset = 40;
 				x2 += 12;
 				x1 += 12;
-				arrowPath = this.path("M" + x2 + " " + y2 + " L" + (x2  - size) + " " + (y2  - size) + " L" + (x2  - size)  + " " + (y2  + size) + " L" + x2 + " " + y2 ).attr("fill","black").rotate((90+angle),x2,y2);
 				linePath = this.path("M" + x1 + " " + y1 + " L" + (x1 + offset) + " " + y1 + " L" + (x1 + offset) + " " + y2 + " L" + x2 + " " + y2);
 			} else	if (x1 < x2) {
 				x2 -= width;
 				x1 += 12;
 				offset = Math.abs(x1 - x2) / 2;
-				arrowPath = this.path("M" + x2 + " " + y2 + " L" + (x2  - size) + " " + (y2  - size) + " L" + (x2  - size)  + " " + (y2  + size) + " L" + x2 + " " + y2 ).attr("fill","black").rotate((90+angle),x2,y2);
 				linePath = this.path("M" + x1 + " " + y1 + " L" + (x1 + offset) + " " + y1 + " L" + (x1 + offset) + " " + y2 + " L" + x2 + " " + y2);
 			} else if (x2 < x1) {
 				x1 -= width;
@@ -88,15 +86,10 @@
 				x2 += 12;
 				angle = 90;
 				offset *= -1;
-				arrowPath = this.path("M" + x2 + " " + y2 + " L" + (x2  - size) + " " + (y2  - size) + " L" + (x2  - size)  + " " + (y2  + size) + " L" + x2 + " " + y2 ).attr("fill","black").rotate((90+angle),x2,y2);
 				linePath = this.path("M" + x1 + " " + y1 + " L" + (x1 + offset) + " " + y1 + " L" + (x1 + offset) + " " + y2 + " L" + x2 + " " + y2);
 			}
-			return [linePath,arrowPath];
-		};
-		Raphael.fn.removeArrow = function (arrow) {
-			arrow.forEach(function(value, index, array) {
-				value.remove();
-			});
+			linePath.attr("stroke-width", 3).attr("arrow-end", "classic-wide-long");
+			return linePath;
 		};
 		
 		$(document).ready(function() {
@@ -200,7 +193,7 @@
 					relationshipObjectSource = allRelationships[i].source.closest(".object");
 					relationshipObjectTarget = allRelationships[i].target.closest(".object");
 					if (relationshipObjectSource.attr("id") == object.attr("id") || relationshipObjectTarget.attr("id") == object.attr("id")) {
-						paper.removeArrow(allRelationships[i].arrow);
+						allRelationships[i].arrow.remove();
 						allRelationships.splice(i--, 1);
 					}
 				}
@@ -256,7 +249,7 @@
 				
 			}).on("mouseup", ".object", function(e) {
 				findMatchingRelations($(this)).forEach(function(value, index, array) {
-					paper.removeArrow(value.arrow);
+					value.arrow.remove();
 					var relationArrow = paper.arrow(value.source.offset().left - 1, value.source.offset().top + 5, value.target.offset().left + 2, value.target.offset().top + 8, 8);
 					value.arrow = relationArrow;
 				});
