--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 			$("#canvas").on("click", ".object .delete", function(e){
 				$(this).parent().parent().remove();
 				deleteRelation($(this).closest(".object"));
+				updateAttributesTable();
 			});
 			$("#canvas").on("click", ".object .minimize", function(e){
 				toggleMinimize.call($(this).parent().parent());
