Added title and fixed html5 validator error

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 	<script src="raphael-min.js"></script>
+	<title>UML Diagram Creator</title>
 	<script>
 			
 			//Array of objects on canvas. 
@@ -723,7 +724,7 @@
 			<legend>Global Settings:</legend>
 				<button type="button" onclick= "clearAll()">Clear All</button><br/>
 				<button type="button" onclick= "collapseAll()">Collapse All</button><br/>
-				<button type="button" onclick= "expandAll()">Expand All</button></br>
+				<button type="button" onclick= "expandAll()">Expand All</button><br/>
 				<button type="button" onclick="createSQL()">Generate SQL</button>
 		</fieldset>
 		 
