Linked the app into summary.html

--- a/summary.html
+++ b/summary.html
@@ -48,6 +48,9 @@
 
 <p>Once you are all done with your diagram, you should be able to visualize your thoughts about what you want to code. Right now, you can export SQL code for the diagram you created. Future enhancements will also include XML export and PNG export for direct image conversion. </p>
         </article>
+		<article class="markdown-body">
+			<h2><a href="index.html" target="_blank">Link to the app!</a></h2>
+		</article>
       </div>
     </div>
     <footer>
